feat(symmetrique): add the 5 NIST finalist + implement asymmetrique codes in front
